@@ -1,4 +1,4 @@
-<title>LilyPond, musieknotatie voor iedereen</title>
+<title>LilyPond, muzieknotatie voor iedereen</title>
 
 <p class="top">
   <tt>http://lilypond.org</tt>
@@ -21,7 +21,7 @@
 <table class="news">
   <tr>
     <th class="news">
-      Plons...
+      Duik...
       <br>
       de LelieVijver in
     </th>
