@@ -1,3 +1,9 @@
+2005-01-28  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* scripts/format-page.py: Refactor.
+
+	* site/template.ihtml: New file.
+
 2005-01-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* site/news.ihtml (href): announce 2.5.9
